commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.enhancedlocationschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.enhancedlocationschangedeventargs.yml
@@ -1,56 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs:interface'
-    summary: |-
-      在引发事件时提供当前增强 `Office.EventType.EnhancedLocationsChanged` 的位置。
+### YamlMime:TSType
+name: Office.EnhancedLocationsChangedEventArgs
+uid: outlook!Office.EnhancedLocationsChangedEventArgs:interface
+package: outlook!
+fullName: Office.EnhancedLocationsChangedEventArgs
+summary: >-
+  在引发事件时提供当前增强 `Office.EventType.EnhancedLocationsChanged` 的位置。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: Office.EnhancedLocationsChangedEventArgs
-    fullName: Office.EnhancedLocationsChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations:member'
-      - 'outlook!Office.EnhancedLocationsChangedEventArgs#type:member'
-  - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations:member'
-    summary: |-
-      获取增强的位置集。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: enhancedLocations
-    fullName: enhancedLocations
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enhancedLocations: LocationDetails[];'
-      return:
-        type:
-          - 'outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations~0:complex'
-  - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+  \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: enhancedLocations
+  uid: outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations:member
+  package: outlook!
+  fullName: enhancedLocations
+  summary: >-
+    获取增强的位置集。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "olkEnhancedLocationsChanged";'
-      return:
-        type:
-          - '"olkEnhancedLocationsChanged"'
-references:
-  - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations~0:complex'
-    name: 'LocationDetails[]'
-    fullName: 'Office.LocationDetails[]'
-    spec.typeScript:
-      - uid: 'outlook!Office.LocationDetails:interface'
-        name: LocationDetails
-        fullName: Office.LocationDetails
-      - name: '[]'
-        fullName: '[]'
+
+    \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enhancedLocations: LocationDetails[];'
+    return:
+      type: <xref uid="outlook!Office.LocationDetails:interface" />[]
+- name: type
+  uid: outlook!Office.EnhancedLocationsChangedEventArgs#type:member
+  package: outlook!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+
+
+    \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "olkEnhancedLocationsChanged";'
+    return:
+      type: "\"olkEnhancedLocationsChanged\""
+metadata:
+  ms.openlocfilehash: 987c8ca9b9279309001707c0aea4077f2439237a
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49210170"
