--- a/docs/docs-ref-autogen/word/word/word.application.yml
+++ b/docs/docs-ref-autogen/word/word/word.application.yml
@@ -1,101 +1,93 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Application:class'
-    summary: |-
-      表示 application 对象。
+### YamlMime:TSType
+name: Word.Application
+uid: word!Word.Application:class
+package: word!
+fullName: Word.Application
+summary: >-
+  表示 application 对象。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Application
-    fullName: Word.Application
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: word!
-    children:
-      - 'word!Word.Application#context:member'
-      - 'word!Word.Application#createDocument:member(1)'
-      - 'word!Word.Application.newObject:member(1)'
-      - 'word!Word.Application#toJSON:member(1)'
-  - uid: 'word!Word.Application#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'word!Word.RequestContext:class'
-  - uid: 'word!Word.Application#createDocument:member(1)'
-    summary: |-
-      使用可选的 base64 编码的 .docx 文件创建一个新文档。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: createDocument(base64File)
-    fullName: createDocument(base64File)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'createDocument(base64File?: string): Word.DocumentCreated;'
-      return:
-        type:
-          - 'word!Word.DocumentCreated:class'
-        description: ''
-      parameters:
-        - id: base64File
-          description: 可选。 Base64 编码的 .docx 文件。 默认值为 null。
-          type:
-            - string
-  - uid: 'word!Word.Application.newObject:member(1)'
-    summary: 创建一个新的 Word 实例。 Application 对象
-    name: newObject(context)
-    fullName: newObject(context)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'static newObject(context: OfficeExtension.ClientRequestContext): Word.Application;'
-      return:
-        type:
-          - 'word!Word.Application:class'
-        description: ''
-      parameters:
-        - id: context
-          description: ''
-          type:
-            - 'office!OfficeExtension.ClientRequestContext:class'
-  - uid: 'word!Word.Application#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Word 应用程序对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.ApplicationData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        toJSON(): {
+  \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: word!Word.Application#context:member
+  package: word!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="word!Word.RequestContext:class" />
+methods:
+- name: createDocument(base64File)
+  uid: word!Word.Application#createDocument:member(1)
+  package: word!
+  fullName: createDocument(base64File)
+  summary: >-
+    使用可选的 base64 编码的 .docx 文件创建一个新文档。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'createDocument(base64File?: string): Word.DocumentCreated;'
+    parameters:
+    - id: base64File
+      description: 可选。 Base64 编码的 .docx 文件。 默认值为 null。
+      type: string
+    return:
+      type: <xref uid="word!Word.DocumentCreated:class" />
+      description: ''
+- name: newObject(context)
+  uid: word!Word.Application.newObject:member(1)
+  package: word!
+  fullName: newObject(context)
+  summary: 创建一个新的 Word 实例。 Application 对象
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'static newObject(context: OfficeExtension.ClientRequestContext): Word.Application;'
+    parameters:
+    - id: context
+      description: ''
+      type: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
+    return:
+      type: <xref uid="word!Word.Application:class" />
+      description: ''
+- name: toJSON()
+  uid: word!Word.Application#toJSON:member(1)
+  package: word!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 Word. Application 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `Word.Interfaces.ApplicationData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      toJSON(): {
+                  [key: string]: string;
+              };
+    return:
+      type: >-
+        {
                     [key: string]: string;
-                };
-      return:
-        type:
-          - |-
-            {
-                        [key: string]: string;
-                    }
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'word!Word.RequestContext:class'
-    name: RequestContext
-  - uid: 'word!Word.DocumentCreated:class'
-    name: Word.DocumentCreated
-  - uid: 'word!Word.Application:class'
-    name: Word.Application
-  - uid: 'office!OfficeExtension.ClientRequestContext:class'
-    name: OfficeExtension.ClientRequestContext
+                }
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 1671f110494322728d85fa172db3cd483f343221
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49210203"
