--- a/docs/docs-ref-autogen/word/word/word.interfaces.custompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.custompropertycollectionloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions:interface'
-    summary: |-
-      包含[CustomProperty](xref:word!Word.CustomProperty:class)对象的集合。
+### YamlMime:TSType
+name: Word.Interfaces.CustomPropertyCollectionLoadOptions
+uid: word!Word.Interfaces.CustomPropertyCollectionLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.CustomPropertyCollectionLoadOptions
+summary: >-
+  包含 [CustomProperty](xref:word!Word.CustomProperty:class) 对象的集合。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.CustomPropertyCollectionLoadOptions
-    fullName: Word.Interfaces.CustomPropertyCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#$all:member'
-      - 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
-      - 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
-      - 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
-    summary: |-
-      对于集合中的每一项：获取自定义属性的键。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: key
-    fullName: key
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'key?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
-    summary: |-
-      对于集合中的每一项：获取自定义属性的值类型。 可能的值包括： String、Number、Date、Boolean。 只读。
+  \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.CustomPropertyCollectionLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: key
+  uid: word!Word.Interfaces.CustomPropertyCollectionLoadOptions#key:member
+  package: word!
+  fullName: key
+  summary: >-
+    对于集合中的每一项：获取自定义属性的键。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
-    summary: |-
-      对于集合中的每一项：获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符（可能通过分解代理项对来创建无效的 unicode）。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'key?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: word!Word.Interfaces.CustomPropertyCollectionLoadOptions#type:member
+  package: word!
+  fullName: type
+  summary: >-
+    对于集合中的每一项：获取自定义属性的值类型。 可能的值包括： String、Number、Date、Boolean。 只读。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: word!Word.Interfaces.CustomPropertyCollectionLoadOptions#value:member
+  package: word!
+  fullName: value
+  summary: >-
+    对于集合中的每一项：获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 15682f5693c2b67cd50b1f7b844b1d9fcaa41f3d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49209603"
