--- a/docs/docs-ref-autogen/word/word/word.interfaces.custompropertycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.custompropertycollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionUpdateData:interface'
-    summary: '一个用于更新 CustomPropertyCollection 对象上的数据的接口，可用于`customPropertyCollection.set({ ... })`<!-- -->.'
-    name: Word.Interfaces.CustomPropertyCollectionUpdateData
-    fullName: Word.Interfaces.CustomPropertyCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.CustomPropertyCollectionUpdateData#items:member'
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Word.Interfaces.CustomPropertyData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.CustomPropertyCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'word!Word.Interfaces.CustomPropertyCollectionUpdateData#items~0:complex'
-    name: 'Word.Interfaces.CustomPropertyData[]'
-    fullName: 'Word.Interfaces.CustomPropertyData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.CustomPropertyData:interface'
-        name: Word.Interfaces.CustomPropertyData
-        fullName: Word.Interfaces.CustomPropertyData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Word.Interfaces.CustomPropertyCollectionUpdateData
+uid: word!Word.Interfaces.CustomPropertyCollectionUpdateData:interface
+package: word!
+fullName: Word.Interfaces.CustomPropertyCollectionUpdateData
+summary: 一个用于更新 CustomPropertyCollection 对象上的数据的接口，可用于 `customPropertyCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: word!Word.Interfaces.CustomPropertyCollectionUpdateData#items:member
+  package: word!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Word.Interfaces.CustomPropertyData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.CustomPropertyData:interface" />[]
+metadata:
+  ms.openlocfilehash: 8ad056c7ce33ff7bb6689d5375418439c9934de2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49209596"
