--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.message.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.message.yml
@@ -1,24 +1,31 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.Message:interface'
-    summary: |-
-      邮件的[项目](xref:outlook!Office.Item:interface)的子类。
+### YamlMime:TSType
+name: Office.Message
+uid: outlook!Office.Message:interface
+package: outlook!
+fullName: Office.Message
+summary: >-
+  邮件的 [项目](xref:outlook!Office.Item:interface) 的子类。
 
-      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式`Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.6/office.context.mailbox.item)页。
 
-      子接口：
+  **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式 `Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅 [对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.6/office.context.mailbox.item) 页。
 
-      - [MessageCompose](xref:outlook!Office.MessageCompose:interface)
 
-      - [Messageread.html](xref:outlook!Office.MessageRead:interface)
-    name: Office.Message
-    fullName: Office.Message
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'outlook!Office.Item:interface'
-    package: outlook!
-references:
-  - uid: 'outlook!Office.Item:interface'
-    name: Item
+  子接口：
+
+
+  - [MessageCompose](xref:outlook!Office.MessageCompose:interface)
+
+
+  - [MessageRead](xref:outlook!Office.MessageRead:interface)
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+extends: <xref uid="outlook!Office.Item:interface" />
+metadata:
+  ms.openlocfilehash: 1a1cf21cd0ac1757a0c2984b4f925c5e795888ac
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49210180"
