commit translated contents

--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.pivottablestyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.pivottablestyleloadoptions.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotTableStyleLoadOptions:interface'
-    summary: |-
-      表示通过数据透视表区域定义样式元素的数据透视表样式。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotTableStyleLoadOptions
+uid: excel!Excel.Interfaces.PivotTableStyleLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.PivotTableStyleLoadOptions
+summary: >-
+  表示通过数据透视表区域定义样式元素的数据透视表样式。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.PivotTableStyleLoadOptions
-    fullName: Excel.Interfaces.PivotTableStyleLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotTableStyleLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.PivotTableStyleLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.PivotTableStyleLoadOptions#readOnly:member'
-  - uid: 'excel!Excel.Interfaces.PivotTableStyleLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableStyleLoadOptions#name:member'
-    summary: |-
-      获取 PivotTableStyle 的名称。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableStyleLoadOptions#readOnly:member'
-    summary: |-
-      指定此 PivotTableStyle 对象是否为只读。
+  \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.PivotTableStyleLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.PivotTableStyleLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    获取 PivotTableStyle 的名称。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: readOnly
-    fullName: readOnly
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readOnly?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: readOnly
+  uid: excel!Excel.Interfaces.PivotTableStyleLoadOptions#readOnly:member
+  package: excel!
+  fullName: readOnly
+  summary: >-
+    指定此 PivotTableStyle 对象是否为只读。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readOnly?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 3189e48f87dd4e7b7d213fa6079526b81045f07b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49235432"
