--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangecollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeCollectionUpdateData:interface'
-    summary: '一个用于更新 RangeCollection 对象上的数据的接口，可用于`rangeCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.RangeCollectionUpdateData
-    fullName: Excel.Interfaces.RangeCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.RangeCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.RangeData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.RangeData[]'
-    fullName: 'Excel.Interfaces.RangeData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.RangeData:interface'
-        name: Excel.Interfaces.RangeData
-        fullName: Excel.Interfaces.RangeData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.RangeCollectionUpdateData
+uid: excel!Excel.Interfaces.RangeCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeCollectionUpdateData
+summary: 一个用于更新 RangeCollection 对象上的数据的接口，可用于 `rangeCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.RangeCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.RangeData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeData:interface" />[]
+metadata:
+  ms.openlocfilehash: 9cdf104d9125f54e2d94e64d7f2bfe7013fe0972
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49235173"
