--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangefilldata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangefilldata.yml
@@ -1,101 +1,94 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeFillData:interface'
-    summary: 描述通过调用返回的数据的接口`rangeFill.toJSON()`<!-- -->.
-    name: Excel.Interfaces.RangeFillData
-    fullName: Excel.Interfaces.RangeFillData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeFillData#color:member'
-      - 'excel!Excel.Interfaces.RangeFillData#pattern:member'
-      - 'excel!Excel.Interfaces.RangeFillData#patternColor:member'
-      - 'excel!Excel.Interfaces.RangeFillData#patternTintAndShade:member'
-      - 'excel!Excel.Interfaces.RangeFillData#tintAndShade:member'
-  - uid: 'excel!Excel.Interfaces.RangeFillData#color:member'
-    summary: |-
-      代表表单 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeFillData
+uid: excel!Excel.Interfaces.RangeFillData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeFillData
+summary: 描述通过调用返回的数据的接口 `rangeFill.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.Interfaces.RangeFillData#color:member
+  package: excel!
+  fullName: color
+  summary: "代表表单 RRGGBB 的背景色的 HTML 颜色代码 \\# (例如，\"FFA500\" ) 或作为命名的 HTML 颜色 (例如 \"橙色\" ) \n\n\\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\\]"
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: pattern
+  uid: excel!Excel.Interfaces.RangeFillData#pattern:member
+  package: excel!
+  fullName: pattern
+  summary: >-
+    区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.RangeFillData#pattern:member'
-    summary: |-
-      区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: pattern
-    fullName: pattern
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pattern?: Excel.FillPattern | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeFillData#pattern~0:complex'
-  - uid: 'excel!Excel.Interfaces.RangeFillData#patternColor:member'
-    summary: |-
-      表示范围模式的颜色的 HTML 颜色代码，格式 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pattern?: Excel.FillPattern | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient";'
+    return:
+      type: <xref uid="excel!Excel.FillPattern:enum" /> | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"
+- name: patternColor
+  uid: excel!Excel.Interfaces.RangeFillData#patternColor:member
+  package: excel!
+  fullName: patternColor
+  summary: >-
+    表示范围模式的颜色的 HTML 颜色代码，格式 \# RRGGBB (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: patternColor
-    fullName: patternColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'patternColor?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.RangeFillData#patternTintAndShade:member'
-    summary: |-
-      指定用于将区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: patternTintAndShade
-    fullName: patternTintAndShade
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'patternTintAndShade?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.RangeFillData#tintAndShade:member'
-    summary: |-
-      指定用于将区域填充的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'patternColor?: string;'
+    return:
+      type: string
+- name: patternTintAndShade
+  uid: excel!Excel.Interfaces.RangeFillData#patternTintAndShade:member
+  package: excel!
+  fullName: patternTintAndShade
+  summary: >-
+    指定用于使区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 (最暗) 和 1 (明亮的) ，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tintAndShade
-    fullName: tintAndShade
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tintAndShade?: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'excel!Excel.Interfaces.RangeFillData#pattern~0:complex'
-    name: Excel.FillPattern | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"
-    fullName: Excel.FillPattern | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"
-    spec.typeScript:
-      - uid: 'excel!Excel.FillPattern:enum'
-        name: Excel.FillPattern
-        fullName: Excel.FillPattern
-      - name: ' | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"'
-        fullName: ' | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"'
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'patternTintAndShade?: number;'
+    return:
+      type: number
+- name: tintAndShade
+  uid: excel!Excel.Interfaces.RangeFillData#tintAndShade:member
+  package: excel!
+  fullName: tintAndShade
+  summary: >-
+    指定用于将区域填充的颜色变浅或变暗的双精度。 该值介于-1 (最暗) 和 1 (最明亮的) ，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tintAndShade?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 50ef218d1580e0a74f3d973fde6d9519719b8bb2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49235083"
