--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangeviewupdatedata.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData:interface'
-    summary: '一个用于更新 RangeView 对象上的数据的接口，可用于`rangeView.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.RangeViewUpdateData
-    fullName: Excel.Interfaces.RangeViewUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeViewUpdateData#formulas:member'
-      - 'excel!Excel.Interfaces.RangeViewUpdateData#formulasLocal:member'
-      - 'excel!Excel.Interfaces.RangeViewUpdateData#formulasR1C1:member'
-      - 'excel!Excel.Interfaces.RangeViewUpdateData#numberFormat:member'
-      - 'excel!Excel.Interfaces.RangeViewUpdateData#values:member'
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData#formulas:member'
-    summary: |-
-      表示采用 A1 表示法的公式。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeViewUpdateData
+uid: excel!Excel.Interfaces.RangeViewUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeViewUpdateData
+summary: 一个用于更新 RangeView 对象上的数据的接口，可用于 `rangeView.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: formulas
+  uid: excel!Excel.Interfaces.RangeViewUpdateData#formulas:member
+  package: excel!
+  fullName: formulas
+  summary: >-
+    表示采用 A1 表示法的公式。
 
-      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulas
-    fullName: formulas
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulas?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData#formulasLocal:member'
-    summary: |-
-      表示采用 A1 表示法的公式，使用用户语言和数字格式区域设置。例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中变为 "=SUMME(A1; 1,5)"。
 
-      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulasLocal
-    fullName: formulasLocal
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulasLocal?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData#formulasR1C1:member'
-    summary: |-
-      表示采用 R1C1 样式表示法的公式。
+    \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulas?: any[][];'
+    return:
+      type: any[][]
+- name: formulasLocal
+  uid: excel!Excel.Interfaces.RangeViewUpdateData#formulasLocal:member
+  package: excel!
+  fullName: formulasLocal
+  summary: >-
+    表示采用 A1 表示法的公式，使用用户语言和数字格式区域设置。例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中变为 "=SUMME(A1; 1,5)"。
 
-      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulasR1C1
-    fullName: formulasR1C1
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulasR1C1?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData#numberFormat:member'
-    summary: |-
-      表示 Excel 中指定单元格的数字格式代码。
 
-      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: numberFormat
-    fullName: numberFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'numberFormat?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData#values:member'
-    summary: |-
-      表示指定的 RangeView 的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
+    \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulasLocal?: any[][];'
+    return:
+      type: any[][]
+- name: formulasR1C1
+  uid: excel!Excel.Interfaces.RangeViewUpdateData#formulasR1C1:member
+  package: excel!
+  fullName: formulasR1C1
+  summary: >-
+    表示采用 R1C1 样式表示法的公式。
 
-      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: values
-    fullName: values
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'values?: any[][];'
-      return:
-        type:
-          - 'any[][]'
+
+    \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulasR1C1?: any[][];'
+    return:
+      type: any[][]
+- name: numberFormat
+  uid: excel!Excel.Interfaces.RangeViewUpdateData#numberFormat:member
+  package: excel!
+  fullName: numberFormat
+  summary: >-
+    表示 Excel 中指定单元格的数字格式代码。
+
+
+    \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'numberFormat?: any[][];'
+    return:
+      type: any[][]
+- name: values
+  uid: excel!Excel.Interfaces.RangeViewUpdateData#values:member
+  package: excel!
+  fullName: values
+  summary: >-
+    表示指定的 RangeView 的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
+
+
+    \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'values?: any[][];'
+    return:
+      type: any[][]
+metadata:
+  ms.openlocfilehash: b72e223c66b26aef44e9ea0b9fb44a2e8053f48d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49234998"
