--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,32 +1,75 @@
 {
   "docsets_to_publish": [
     {
-      "customized_tasks": {
-        "docset_prebuild": [
-          "_dependentPackages/CommonPlugins/tools/JoinTOC.ps1"
-        ]
-      },
       "docset_name": "office-docs-ref-javascript",
       "build_source_folder": "docs",
       "build_output_subfolder": "office-docs-ref-javascript",
       "locale": "zh-cn",
       "monikers": [],
-      "moniker_ranges": [],
+      "moniker_ranges": [
+        "common-js",
+        "excel-js-preview",
+        "excel-js-1.1",
+        "excel-js-1.2",
+        "excel-js-1.3",
+        "excel-js-1.4",
+        "excel-js-1.5",
+        "excel-js-1.6",
+        "excel-js-1.7",
+        "excel-js-1.8",
+        "excel-js-1.9",
+        "excel-js-1.10",
+        "excel-js-1.11",
+        "excel-js-1.12",
+        "excel-js-online",
+        "onenote-js-1.1",
+        "outlook-js-preview",
+        "outlook-js-1.1",
+        "outlook-js-1.2",
+        "outlook-js-1.3",
+        "outlook-js-1.4",
+        "outlook-js-1.5",
+        "outlook-js-1.6",
+        "outlook-js-1.7",
+        "outlook-js-1.8",
+        "outlook-js-1.9",
+        "powerpoint-js-1.1",
+        "powerpoint-js-preview",
+        "visio-js-1.1",
+        "word-js-preview",
+        "word-js-1.1",
+        "word-js-1.2",
+        "word-js-1.3"
+      ],
       "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content",
-        "UniversalReference": "Content"
+        "TSType": "Content",
+        "TSPackage": "Content",
+        "TSEnum": "Content",
+        "TSTypeAlias": "Content"
       },
       "build_entry_point": "docs",
       "template_folder": "_themes",
+      "customized_tasks": {
+        "docset_prebuild": [
+          "_dependentPackages/CommonPlugins/tools/JoinTOC.ps1"
+        ]
+      },
       "customized_template_paths": [
         "_dependentPackages/uref.plugins/content"
       ]
-
     }
   ],
+  "notification_subscribers": ["mor-oitac-eng@rws.com"],
+  "sync_notification_subscribers": [],
+  "branches_to_filter": ["live","master-sxs"],
+  "skip_source_output_uploading": false,
+  "continue_with_document_error": true,
+  "need_preview_pull_request": false,
+  "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
       "path_to_root": "_themes.pdf",
@@ -51,22 +94,22 @@
     }
   ],
   "branch_target_mapping": {
-   "live": [
-     "Publish",
-     "Pdf"
-   ],
-   "live-sxs": [
-     "Publish",
-     "Pdf"
-   ],
-   "master": [
-    "Publish",
-    "Pdf"
-  ]
+     "live": [
+       "Publish",
+       "Pdf"
+     ],
+     "live-sxs": [
+       "Publish",
+       "Pdf"
+     ],
+     "master": [
+      "Publish",
+      "Pdf"
+    ]
   },
   "need_generate_pdf_url_template": true,
   "need_generate_pdf": true,
-  "Targets": {
+  "targets": {
     "Pdf": {  
     "template_folder": "_themes.pdf"  
     } 
@@ -75,14 +118,144 @@
     {
       "ReferenceTOC": "docs/docs-ref-autogen/toc.yml",
       "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/common/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_1/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_2/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_3/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_4/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_5/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_6/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_7/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_8/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/outlook_1_9/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_1/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_2/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_3/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_4/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_5/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_6/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_7/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_8/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_9/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_10/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_11/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_1_12/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/excel_online/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/onenote/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/overview/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/powerpoint/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/powerpoint_1_1/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/visio/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/word/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/word_1_1/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/word_1_2/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
+    },
+    {
+      "ReferenceTOC": "docs/docs-ref-autogen/word_1_3/toc.yml",
+      "ConceptualTOCUrl": "/office/dev/add-ins/toc.json"
     }
   ],
-  "notification_subscribers": ["mor-oitac-eng@moravia.com"],
-  "branches_to_filter": ["live","master-sxs"],
-  "skip_source_output_uploading": false,
-  "continue_with_document_error": true,
-  "need_preview_pull_request": false,
-  "contribution_branch_mappings": {},
   "dependent_packages": [
     {
       "id": "opbuild.templates.uref",
@@ -90,7 +263,6 @@
       "path_to_root": "_dependentPackages/uref.plugins",
       "target_framework": "net45",
       "version": "latest"
-
     },
     {
       "id": "Microsoft.OpenPublishing.CommonPlugins",
@@ -101,4 +273,3 @@
     }
   ]
 }
-
