commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangefontupdatedata.yml
@@ -1,101 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData:interface'
-    summary: '一个用于更新 ConditionalRangeFont 对象上的数据的接口，可用于`conditionalRangeFont.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ConditionalRangeFontUpdateData
-    fullName: Excel.Interfaces.ConditionalRangeFontUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#bold:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#color:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#italic:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#strikethrough:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#underline:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#bold:member'
-    summary: |-
-      指定字体是否为粗体。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeFontUpdateData
+uid: excel!Excel.Interfaces.ConditionalRangeFontUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeFontUpdateData
+summary: 一个用于更新 ConditionalRangeFont 对象上的数据的接口，可用于 `conditionalRangeFont.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: bold
+  uid: excel!Excel.Interfaces.ConditionalRangeFontUpdateData#bold:member
+  package: excel!
+  fullName: bold
+  summary: >-
+    指定字体是否为粗体。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: bold
-    fullName: bold
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'bold?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#color:member'
-    summary: |-
-      文本颜色的 HTML 颜色代码表示形式（例如， \# FF0000 表示红色）。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#italic:member'
-    summary: |-
-      指定字体是否为斜体。
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'bold?: boolean;'
+    return:
+      type: boolean
+- name: color
+  uid: excel!Excel.Interfaces.ConditionalRangeFontUpdateData#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    文本颜色的 HTML 颜色代码表示 (例如， \# FF0000 表示红色) 。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: italic
-    fullName: italic
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'italic?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#strikethrough:member'
-    summary: |-
-      指定字体的删除线状态。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: strikethrough
-    fullName: strikethrough
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'strikethrough?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#underline:member'
-    summary: |-
-      应用于字体的下划线类型。 有关详细信息，请参阅 ConditionalRangeFontUnderlineStyle。
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: italic
+  uid: excel!Excel.Interfaces.ConditionalRangeFontUpdateData#italic:member
+  package: excel!
+  fullName: italic
+  summary: >-
+    指定字体是否为斜体。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: underline
-    fullName: underline
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'underline?: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#underline~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData#underline~0:complex'
-    name: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double"
-    fullName: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double"
-    spec.typeScript:
-      - uid: 'excel!Excel.ConditionalRangeFontUnderlineStyle:enum'
-        name: Excel.ConditionalRangeFontUnderlineStyle
-        fullName: Excel.ConditionalRangeFontUnderlineStyle
-      - name: ' | "None" | "Single" | "Double"'
-        fullName: ' | "None" | "Single" | "Double"'
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'italic?: boolean;'
+    return:
+      type: boolean
+- name: strikethrough
+  uid: excel!Excel.Interfaces.ConditionalRangeFontUpdateData#strikethrough:member
+  package: excel!
+  fullName: strikethrough
+  summary: >-
+    指定字体的删除线状态。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'strikethrough?: boolean;'
+    return:
+      type: boolean
+- name: underline
+  uid: excel!Excel.Interfaces.ConditionalRangeFontUpdateData#underline:member
+  package: excel!
+  fullName: underline
+  summary: >-
+    应用于字体的下划线类型。 有关详细信息，请参阅 ConditionalRangeFontUnderlineStyle。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'underline?: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double";'
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeFontUnderlineStyle:enum" /> | "None" | "Single" | "Double"
+metadata:
+  ms.openlocfilehash: c404742a5acb727f2f8288cfdc0f79fe5d62c698
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49244477"
