--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangeformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangeformatloadoptions.yml
@@ -1,98 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
-    summary: |-
-      将条件格式区域的字体、填充、边框和其他属性封装在一起的格式对象。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeFormatLoadOptions
+uid: excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeFormatLoadOptions
+summary: >-
+  将条件格式区域的字体、填充、边框和其他属性封装在一起的格式对象。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ConditionalRangeFormatLoadOptions
-    fullName: Excel.Interfaces.ConditionalRangeFormatLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#borders:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#fill:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#font:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#numberFormat:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#borders:member'
-    summary: |-
-      应用于整体条件格式范围的 border 对象的集合。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: borders
-    fullName: borders
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'borders?: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#fill:member'
-    summary: |-
-      返回在整体条件格式范围上定义的 fill 对象。
+  \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: borders
+  uid: excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#borders:member
+  package: excel!
+  fullName: borders
+  summary: >-
+    应用于整体条件格式范围的 border 对象的集合。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: fill
-    fullName: fill
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'fill?: Excel.Interfaces.ConditionalRangeFillLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#font:member'
-    summary: |-
-      返回在整体条件格式区域上定义的 font 对象。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.ConditionalRangeFontLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#numberFormat:member'
-    summary: |-
-      表示给定范围的 Excel 数字格式代码。 如果传入 null，则清除。
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'borders?: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface" />
+- name: fill
+  uid: excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#fill:member
+  package: excel!
+  fullName: fill
+  summary: >-
+    返回在整体条件格式范围上定义的 fill 对象。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: numberFormat
-    fullName: numberFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'numberFormat?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface'
-    name: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface'
-    name: Excel.Interfaces.ConditionalRangeFillLoadOptions
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions:interface'
-    name: Excel.Interfaces.ConditionalRangeFontLoadOptions
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'fill?: Excel.Interfaces.ConditionalRangeFillLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface" />
+- name: font
+  uid: excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    返回在整体条件格式区域上定义的 font 对象。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.ConditionalRangeFontLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeFontLoadOptions:interface" />
+- name: numberFormat
+  uid: excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#numberFormat:member
+  package: excel!
+  fullName: numberFormat
+  summary: >-
+    表示给定范围的 Excel 数字格式代码。 如果传入 null，则清除。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'numberFormat?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ae35c8af4a9dcd370d46cde4e88b5ecf0d187ea1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49244464"
