--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangebordercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangebordercollectionloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface'
-    summary: |-
-      表示构成区域边框的 border 对象。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
+uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
+summary: >-
+  表示构成区域边框的 border 对象。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
-    fullName: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#color:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#sideIndex:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#style:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#color:member'
-    summary: |-
-      对于集合中的每一项： HTML 颜色代码（ \# 例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"），表示边框线的颜色 RRGGBB （如 ""）或命名的 HTML 颜色（例如 "橙色"）。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#sideIndex:member'
-    summary: |-
-      对于集合中的每一项：常量值，用于指示边框的特定侧。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
+  \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: color
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    对于集合中的每一项： HTML 颜色代码（表示边框线的颜色）的 \# RRGGBB (例如，"FFA500" ) 或命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: sideIndex
-    fullName: sideIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sideIndex?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#style:member'
-    summary: |-
-      对于集合中的每个项目：指定边框线条样式的线条样式的常量之一。 有关详细信息，请参阅 BorderLineStyle。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: boolean;'
+    return:
+      type: boolean
+- name: sideIndex
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#sideIndex:member
+  package: excel!
+  fullName: sideIndex
+  summary: >-
+    对于集合中的每一项：常量值，用于指示边框的特定侧。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sideIndex?: boolean;'
+    return:
+      type: boolean
+- name: style
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    对于集合中的每个项目：指定边框线条样式的线条样式的常量之一。 有关详细信息，请参阅 BorderLineStyle。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 0ce2b93fb137bd400221c646fde7edf0f332588a
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49244624"
