--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfodata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfodata.yml
@@ -1,64 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.CultureInfoData:interface'
-    summary: 描述通过调用返回的数据的接口 `cultureInfo.toJSON()`<!-- -->.
-    name: Excel.Interfaces.CultureInfoData
-    fullName: Excel.Interfaces.CultureInfoData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.CultureInfoData#datetimeFormat:member'
-      - 'excel!Excel.Interfaces.CultureInfoData#name:member'
-      - 'excel!Excel.Interfaces.CultureInfoData#numberFormat:member'
-  - uid: 'excel!Excel.Interfaces.CultureInfoData#datetimeFormat:member'
-    summary: |-
-      定义适当的区域性格式，以显示日期和时间。 这取决于当前的系统区域性设置。
+### YamlMime:TSType
+name: Excel.Interfaces.CultureInfoData
+uid: excel!Excel.Interfaces.CultureInfoData:interface
+package: excel!
+fullName: Excel.Interfaces.CultureInfoData
+summary: 描述通过调用返回的数据的接口 `cultureInfo.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: datetimeFormat
+  uid: excel!Excel.Interfaces.CultureInfoData#datetimeFormat:member
+  package: excel!
+  fullName: datetimeFormat
+  summary: >-
+    定义适当的区域性格式，以显示日期和时间。 这取决于当前的系统区域性设置。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: datetimeFormat
-    fullName: datetimeFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'datetimeFormat?: Excel.Interfaces.DatetimeFormatInfoData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.DatetimeFormatInfoData:interface'
-  - uid: 'excel!Excel.Interfaces.CultureInfoData#name:member'
-    summary: |-
-      以 languagecode2/regioncode2 (格式获取区域性名称，例如 "zh-tw-cn" or "en-us" ) 。 这取决于当前的系统设置。
 
-      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.CultureInfoData#numberFormat:member'
-    summary: |-
-      定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'datetimeFormat?: Excel.Interfaces.DatetimeFormatInfoData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.DatetimeFormatInfoData:interface" />
+- name: name
+  uid: excel!Excel.Interfaces.CultureInfoData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    以 languagecode2/regioncode2 (格式获取区域性名称，例如 "zh-tw-cn" or "en-us" ) 。 这取决于当前的系统设置。
 
-      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: numberFormat
-    fullName: numberFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'numberFormat?: Excel.Interfaces.NumberFormatInfoData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.NumberFormatInfoData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.DatetimeFormatInfoData:interface'
-    name: Excel.Interfaces.DatetimeFormatInfoData
-  - uid: 'excel!Excel.Interfaces.NumberFormatInfoData:interface'
-    name: Excel.Interfaces.NumberFormatInfoData
+
+    \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: numberFormat
+  uid: excel!Excel.Interfaces.CultureInfoData#numberFormat:member
+  package: excel!
+  fullName: numberFormat
+  summary: >-
+    定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
+
+
+    \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'numberFormat?: Excel.Interfaces.NumberFormatInfoData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.NumberFormatInfoData:interface" />
+metadata:
+  ms.openlocfilehash: 7dc5b93f398e655b0faccf9fc94b7f75f09120d5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49244428"
