--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.customconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.customconditionalformatdata.yml
@@ -1,48 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData:interface'
-    summary: 描述通过调用返回的数据的接口`customConditionalFormat.toJSON()`<!-- -->.
-    name: Excel.Interfaces.CustomConditionalFormatData
-    fullName: Excel.Interfaces.CustomConditionalFormatData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.CustomConditionalFormatData#format:member'
-      - 'excel!Excel.Interfaces.CustomConditionalFormatData#rule:member'
-  - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData#format:member'
-    summary: |-
-      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
+### YamlMime:TSType
+name: Excel.Interfaces.CustomConditionalFormatData
+uid: excel!Excel.Interfaces.CustomConditionalFormatData:interface
+package: excel!
+fullName: Excel.Interfaces.CustomConditionalFormatData
+summary: 描述通过调用返回的数据的接口 `customConditionalFormat.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: format
+  uid: excel!Excel.Interfaces.CustomConditionalFormatData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ConditionalRangeFormatData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
-  - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData#rule:member'
-    summary: |-
-      指定此条件格式的 Rule 对象。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rule
-    fullName: rule
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rule?: Excel.Interfaces.ConditionalFormatRuleData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalFormatRuleData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
-    name: Excel.Interfaces.ConditionalRangeFormatData
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleData:interface'
-    name: Excel.Interfaces.ConditionalFormatRuleData
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ConditionalRangeFormatData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeFormatData:interface" />
+- name: rule
+  uid: excel!Excel.Interfaces.CustomConditionalFormatData#rule:member
+  package: excel!
+  fullName: rule
+  summary: >-
+    指定此条件格式的 Rule 对象。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rule?: Excel.Interfaces.ConditionalFormatRuleData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalFormatRuleData:interface" />
+metadata:
+  ms.openlocfilehash: 78435001b165899141fd06f6daab62cb5c51dfaf
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49244393"
